More SDK methods

--- a/build.gradle
+++ b/build.gradle
@@ -20,15 +20,22 @@ repositories {
     }
 }
 
+ext {
+    jacksonVersion = '2.18.2' // Replace with the latest version
+}
 
 dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
 
+    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
+
     compileOnly 'org.projectlombok:lombok:1.18.34'
-    implementation 'io.unmeshed:unmeshed-sdk:0.3.11'
-    implementation 'io.unmeshed:unmeshed-api-common:0.3.11'
+    implementation 'io.unmeshed:unmeshed-sdk:1.6.2'
+    implementation 'io.unmeshed:unmeshed-api-common:1.6.2'
 
     implementation 'org.slf4j:slf4j-api:2.0.16'
     // Use your preferred logging solution
-    implementation 'ch.qos.logback:logback-classic:1.5.12'
+    implementation 'ch.qos.logback:logback-classic:1.5.16'
 }
